--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+
 spring.favicon.enabled = false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_blog_web
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_blog_web?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
